@@ -1,4 +1,6 @@
 master
+- mayhem
+  fix options popping up everytime a page loads
 
 2.24.1
 - mayhem
